Add main body contents

--- a/index.html
+++ b/index.html
@@ -26,3 +26,21 @@
             <button class="sound-button">🔊</button>
         </div>
     </nav>
+
+    <!-- Main body section -->
+  <div class=" story overlay">
+    <img hidden id="picture" src="./assets/images/end.svg" alt="hero-image">
+    <h1 id="title">Are you ready to choose your path?</h1>
+    <h2 id="context">
+      You get to decide which path the character will take as it tries to navigate <br>
+      the gap between the natural and technological worlds.<br><br>
+      Along the road, there will be many obstacles to overcome,<br>
+      and the path you take will depend on the decisions you make.
+    </h2>
+    <br><br>
+    <div class="button-container">
+      <button id="button1" class="visible">Begin!</button>
+      <button id="button2" class="hidden">Next</button>
+      <button id="button3" class="hidden">Next</button>
+    </div>
+  </div>
