Add video bg to index

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         </div>
     </nav>
 
+    <!-- Video Background -->
+  <div class="video-container">
+    <video autoplay muted loop>
+      <source src="assets/video/video-bg.mp4" type="video/mp4">
+    </video>
+  </div>
+
     <!-- Main body section -->
   <div class=" story overlay">
     <img hidden id="picture" src="./assets/images/end.svg" alt="hero-image">
