Add fontawesome / JS links + close body

--- a/index.html
+++ b/index.html
@@ -64,3 +64,11 @@
       <a href="https://github.com/sharonfranciscofaria" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
   </footer>
+
+  
+  <script src="https://kit.fontawesome.com/8622588ebf.js" crossorigin="anonymous"></script>
+  <script src="./assets/js/script.js"></script>
+
+</body>
+
+</html>
