Update readme, index, css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="index.html" class="brand">Nature or Tech</a>
 
         <div class="icons">
-            <a href="index.html"> <button class="home-button">🏠</button> </a>
+            <a href="index.html" class="home-button">🏠</a>
             <button class="sound-button">🔊</button>
             <script>
                 const button = document.querySelector(".sound-button");
