--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
     <footer class="footer-container">
         <p>Game created by © Sharon Francisco Faria</p>
         <div class="social-media">
-            <a href="https://www.facebook.com/yourpage" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="https://twitter.com/yourpage" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="https://www.instagram.com/yourpage" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="https://www.youtube.com/user/yourpage" target="_blank"><i class="fa fa-youtube"></i></a>
-            <a href="https://www.pinterest.co.uk/" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
-            <a href="https://github.com/sharonfranciscofaria" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.facebook.com/yourpage" target="_blank"><i class="fa fa-facebook" alt="facebook"></i></a>
+            <a href="https://twitter.com/yourpage" target="_blank"><i class="fa fa-twitter" alt="twitter"></i></a>
+            <a href="https://www.instagram.com/yourpage" target="_blank"><i class="fa fa-instagram" alt="instagram"></i></a>
+            <a href="https://www.youtube.com/user/yourpage" target="_blank"><i class="fa fa-youtube" alt="youtube"></i></a>
+            <a href="https://www.pinterest.co.uk/" target="_blank"><i class="fa-brands fa-pinterest" alt="pinterest"></i></a>
+            <a href="https://github.com/sharonfranciscofaria" target="_blank"><i class="fa-brands fa-github" alt="github"></i></a>
         </div>
     </footer>
 
