--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
             and the path you take will depend on the decisions you make.
         </h2>
         <br><br>
-        <div class="button-container">
+        <div class="button-container"  class="btn-grid">
             <button id="button1" class="visible">Begin!</button>
             <button id="button2" class="hidden">Next</button>
             <button id="button3" class="hidden">Next</button>
         </div>
     </div>
+
+    
 
     <!-- Footer -->
     <footer class="footer-container">
@@ -80,7 +82,7 @@
             <a href="https://www.instagram.com/yourpage" target="_blank"><i class="fa fa-instagram" alt="instagram"></i></a>
             <a href="https://www.youtube.com/user/yourpage" target="_blank"><i class="fa fa-youtube" alt="youtube"></i></a>
             <a href="https://www.pinterest.co.uk/" target="_blank"><i class="fa-brands fa-pinterest" alt="pinterest"></i></a>
-            <a href="https://github.com/sharonfranciscofaria" target="_blank"><i class="fa-brands fa-github" alt="github"></i></a>
+            <a href="https://github.com/sharonfranciscofaria" target="_blank"><i class="fa-brands fa-github" alt="hero-image"></i></a>
         </div>
     </footer>
 
