Add images to readme and update js

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Main body section -->
     <div class=" story overlay">
-        <img hidden id="picture" src="./assets/images/end.svg" alt="hero-image">
+        <img id="picture" src="./assets/images/start.svg" alt="hero-image">
         <h1 id="title">Are you ready to choose your path?</h1>
         <h2 id="context">
             You get to decide which path the character will take as it tries to navigate <br>
@@ -65,9 +65,11 @@
         </h2>
         <br><br>
         <div class="button-container"  class="btn-grid">
-            <button id="button1" class="visible">Begin!</button>
-            <button id="button2" class="hidden">Next</button>
-            <button id="button3" class="hidden">Next</button>
+            <button id="button1">Begin!</button>
+            <br>
+            <button id="button2">How to play</button>
+            <br>
+            <button id="button3">About</button>
         </div>
     </div>
 
