fix narrative in JS + images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- Navbar + sound -->
     <nav class="nav-container">
         <a href="index.html" class="brand">Nature or Tech</a>
 
